--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/wenbinSCIS/DriverZone#readme",
   "dependencies": {
-    "firebase": "^9.1.1"
+    "firebase": "^9.1.1",
+    "messagemedia-messages-sdk": "^2.0.3"
   }
 }
