--- a/public/firebase.json
+++ b/public/firebase.json
@@ -1,7 +1,10 @@
 {
   "hosting": {
     "public": "public",
-    "ignore": [
+    "ignore": []
+  },
+  "functions": {
+    "predeploy": [
      
     ]
   }
